--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,78 +1,238 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@article{li2023vector,
-  title={Vector Quantized Representations for Efficient Hierarchical Delineation of Behavioral Repertoires},
-  author={Li, Tianqing and Klibaite, Ugne and Akoad, Jumana F and Wu, Joshua H and Dunn, Timothy W},
-  journal={Computational and Systems Neuroscience (Cosyne)},
+@article{lee2024anisotropic,
+  title={Anisotropic regularization for sparsely sampled and noise-robust Fourier ptychography},
+  author={Lee, Kyung Chul and Chae, Hyesuk and Xu, Shiqi and Lee, Kyungwon and Horstmeyer, Roarke and Lee, Seung Ah and Hong, Byung-Woo},
+  journal={Optics Express},
+  volume={32},
+  number={14},
+  pages={25343--25361},
   year={2024},
-  selected={true},
-  preview={vq.png},
-  pdf={https://drive.google.com/file/d/1PXVBzq9MwH_ZBzEMqrAOmF5cGA6GdojB/view?usp=drive_link},
-  code={https://github.com/tqxli/vqmap},
-  poster={https://drive.google.com/file/d/1hwIZo8cMHxnXDLs67M1bLqOnR8Zyqxdb/view?usp=drive_link},
+  publisher={Optica Publishing Group}
 }
 
-@article{klibaite4657709mapping,
-  title={Mapping the Landscape of Social Behavior},
-  author={Klibaite*, Ugne and Li*, Tianqing and Aldarondo, Diego and Akoad, Jumana F and {\"O}lveczky, Bence P and Dunn, Timothy},
-  journal={Under Review},
-  year={2023},
-  selected={true},
-  preview={sdannce.png},
-  paper={https://www.biorxiv.org/content/10.1101/2024.09.27.615451v1},
-  code={https://github.com/tqxli/sdannce}
-}
-
-@article{klibaite2023capturing,
-  title={Capturing the Social Spectrum in ASD Rats},
-  author={Klibaite*, Ugne and Li*, Tianqing and Aldarondo, Diego and Dunn, Timothy and Olveczky, Bence},
-  journal={Bulletin of the American Physical Society},
-  year={2023},
-  publisher={APS},
-  html={https://meetings.aps.org/Meeting/MAR23/Session/S14.2}
-}
-
-@article{li2023improved,
-  title={Improved 3D Markerless Mouse Pose Estimation Using Temporal Semi-supervision},
-  author={Li, Tianqing and Severson, Kyle S and Wang, Fan and Dunn, Timothy W},
-  journal={International Journal of Computer Vision},
-  volume={131},
-  number={6},
-  pages={1389--1405},
-  year={2023},
-  publisher={Springer},
-  html={https://link.springer.com/article/10.1007/s11263-023-01756-3},
-  selected={true},
-  preview={temporal.png},
-  poster={https://drive.google.com/file/d/1cLuz6eQckAh_P9SBhk4OfOvPbJbleOC9/view?usp=sharing},
-  code={https://github.com/tqxli/dannce-pytorch},
-}
-
-@article{marshall2022leaving,
-  title={Leaving flatland: Advances in 3D behavioral measurement},
-  author={Marshall, Jesse D and Li, Tianqing and Wu, Joshua H and Dunn, Timothy W},
-  journal={Current Opinion in Neurobiology},
-  volume={73},
-  pages={102522},
-  year={2022},
-  publisher={Elsevier},
-  preview={leaving_flatland.jpg},
-  html={https://www.sciencedirect.com/science/article/abs/pii/S0959438822000071},
-  arxiv={2112.01987},
+@article{xu2023tensorial,
+  title={Tensorial tomographic Fourier Ptychography with applications to muscle tissue imaging},
+  author={Xu, Shiqi and Yang, Xi and Ritter, Paul and Dai, Xiang and Lee, Kyung Chul and Kreiss, Lucas and Zhou, Kevin C and Kim, Kanghyun and Chaware, Amey and Neff, Jadee and others},
+  journal={Advanced Photonics},
+  volume={6},
+  number={2},
+  year={2024},
+  html={https://doi.org/10.1117/1.AP.6.2.026004},
+  preview={tofu.png},
   selected={true}
 }
 
-@inproceedings{li2021multi,
-  title={A multi-pronged evaluation for image normalization techniques},
-  author={Li, Tianqing and Wei, Leihao and Hsu, William},
-  booktitle={2021 IEEE 18th International Symposium on Biomedical Imaging (ISBI)},
-  pages={1292--1296},
-  year={2021},
-  organization={IEEE},
-  html={https://ieeexplore.ieee.org/document/9434007},
-  preview={ct.png}
+@article{kreiss2023digital,
+  title={Digital staining in optical microscopy using deep learning - a review},
+  author={Kreiss, Lucas and Jiang, Shaowei and Li, Xiang and Xu, Shiqi and Zhou, Kevin C and M{\"u}hlberg, Alexander and Lee, Kyung Chul and Kim, Kanghyun and Chaware, Amey and Ando, Michael and others},
+  journal={PhotoniX},
+  volume={4},
+  number={34},
+  year={2024},
+  html={https://doi.org/10.1186/s43074-023-00113-4},
+  publisher={Springer Open},
+  preview={digistain_review.png}
 }
 
+@article{harfouche2023imaging,
+  title={Imaging across multiple spatial scales with the multi-camera array microscope},
+  author={Harfouche, Mark and Kim, Kanghyun and Zhou, Kevin C and Konda, Pavan Chandra and Sharma, Sunanda and Thomson, Eric E and Cooke, Colin and Xu, Shiqi and Kreiss, Lucas and Chaware, Amey and others},
+  journal={Optica},
+  volume={10},
+  number={4},
+  pages={471--480},
+  year={2023},
+  html={https://doi.org/10.1364/OPTICA.478010},
+  publisher={Optica Publishing Group},
+  preview={kk_mcam_falcon.png}
+}
+
+@article{yang2023multi,
+  title={Multi-modal imaging using a cascaded microscope design},
+  author={Yang, Xi and Harfouche, Mark and Zhou, Kevin C and Kreiss, Lucas and Xu, Shiqi and Konda, Pavan Chandra and Kim, Kanghyun and Horstmeyer, Roarke},
+  journal={Optics Letters},
+  volume={48},
+  number={7},
+  pages={1658--1661},
+  year={2023},
+  html={https://doi.org/10.1364/OL.471380},
+  publisher={Optica Publishing Group},
+  preview={mfast.png}
+}
+
+@article{thomson2022gigapixel,
+  title={Gigapixel imaging with a novel multi-camera array microscope},
+  author={Thomson, Eric E and Harfouche, Mark and Kim, Kanghyun and Konda, Pavan C and Seitz, Catherine W and Cooke, Colin and Xu, Shiqi and Jacobs, Whitney S and Blazing, Robin and Chen, Yang and others},
+  journal={Elife},
+  volume={11},
+  pages={e74988},
+  year={2022},
+  html={https://elifesciences.org/articles/74988},
+  publisher={eLife Sciences Publications Limited},
+  preview={ericelife.png}
+}
+
+@article{ayaz2022optical,
+  title={Optical imaging and spectroscopy for the study of the human brain: status report},
+  author={Ayaz, Hasan and Baker, Wesley B and Blaney, Giles and Boas, David A and Bortfeld, Heather and Brady, Kenneth and Brake, Joshua and Brigadoi, Sabrina and Buckley, Erin M and Carp, Stefan A and others},
+  journal={Neurophotonics},
+  volume={9},
+  number={S2},
+  pages={S24001},
+  year={2022},
+  html={https://doi.org/10.1117/1.NPh.9.S2.S24001},
+  publisher={SPIE}
+}
+
+@article{cooke2022multiple,
+  title={A multiple instance learning approach for detecting COVID-19 in peripheral blood smears},
+  author={Cooke, Colin L and Kim, Kanghyun and Xu, Shiqi and Chaware, Amey and Yao, Xing and Yang, Xi and Neff, Jadee and Pittman, Patricia and McCall, Chad and Glass, Carolyn and others},
+  journal={PLOS Digital Health},
+  volume={1},
+  number={8},
+  pages={e0000078},
+  year={2022},
+  html={https://doi.org/10.1371/journal.pdig.0000078},
+  publisher={Public Library of Science San Francisco, CA USA},
+  preview={covid_mil.png}
+}
+
+@inproceedings{xu2022tensorial,
+  title={Tensorial tomographic differential phase-contrast microscopy},
+  author={Xu, Shiqi and Dai, Xiang and Yang, Xi and Zhou, Kevin C and Kim, Kanghyun and Pathak, Vinayak and Glass, Carolyn and Horstmeyer, Roarke},
+  booktitle={2022 IEEE International Conference on Computational Photography (ICCP)},
+  pages={1--11},
+  year={2022},
+  html={https://ieeexplore.ieee.org/document/9887674},
+  organization={IEEE},
+  preview={t2dpc.png}
+}
+
+@article{xu2022transient,
+  title={Transient motion classification through turbid volumes via parallelized single-photon detection and deep contrastive embedding},
+  author={Xu, Shiqi and Liu, Wenhui and Yang, Xi and J{\"o}nsson, Joakim and Qian, Ruobing and McKee, Paul and Kim, Kanghyun and Konda, Pavan Chandra and Zhou, Kevin C and Krei{\ss}, Lucas and others},
+  journal={Frontiers in neuroscience},
+  volume={16},
+  pages={908770},
+  year={2022},
+  html={https://www.frontiersin.org/articles/10.3389/fnins.2022.908770/full},
+  publisher={Frontiers},
+  preview={crepe.png}
+}
+
+@article{xu2022imaging,
+  title={Imaging Dynamics Beneath Turbid Media via Parallelized Single-Photon Detection},
+  author={Xu, Shiqi and Yang, Xi and Liu, Wenhui and J{\"o}nsson, Joakim and Qian, Ruobing and Konda, Pavan Chandra and Zhou, Kevin C and Krei{\ss}, Lucas and Wang, Haoqian and Dai, Qionghai and others},
+  journal={Advanced Science},
+  volume={9},
+  number={24},
+  pages={2201885},
+  year={2022},
+  html={https://onlinelibrary.wiley.com/doi/10.1002/advs.202201885},
+  publisher={Wiley Online Library},
+  preview={pdci.png},
+  selected={true}
+}
+
+@article{dai2022quantitative,
+  title={Quantitative Jones matrix imaging using vectorial Fourier ptychography},
+  author={Xu, Shiqi and Dai, Xiang and Yang, Xi and Zhou, Kevin C and Glass, Carolyn and Konda, Pavan Chandra and Horstmeyer, Roarke},
+  journal={Biomedical optics express},
+  volume={13},
+  number={3},
+  pages={1457--1470},
+  year={2022},
+  html={https://doi.org/10.1364/BOE.448804},
+  publisher={Optica Publishing Group},
+  preview={vfp2d.png}
+}
+
+@article{yao2022increasing,
+  title={Increasing a microscope’s effective field of view via overlapped imaging and machine learning},
+  author={Yao, Xing and Pathak, Vinayak and Xi, Haoran and Chaware, Amey and Cooke, Colin and Kim, Kanghyun and Xu, Shiqi and Li, Yuting and Dunn, Timothy and Konda, Pavan Chandra and others},
+  journal={Optics Express},
+  volume={30},
+  number={2},
+  pages={1745--1761},
+  year={2022},
+  html={https://doi.org/10.1364/OE.445001},
+  publisher={Optica Publishing Group},
+  preview={overlap.png}
+}
+
+@article{yang2021quantized,
+  title={Quantized Fourier ptychography with binary images from SPAD cameras},
+  author={Yang, Xi and Konda, Pavan Chandra and Xu, Shiqi and Bian, Liheng and Horstmeyer, Roarke},
+  journal={Photonics Research},
+  volume={9},
+  number={10},
+  pages={1958--1969},
+  year={2021},
+  html={https://doi.org/10.1364/PRJ.427699},
+  publisher={Optica Publishing Group},
+  preview={qfp.png}
+}
+
+@article{liu2021fast,
+  title={Fast and sensitive diffuse correlation spectroscopy with highly parallelized single photon detection},
+  author={Liu, Wenhui and Qian, Ruobing and Xu, Shiqi and Chandra Konda, Pavan and J{\"o}nsson, Joakim and Harfouche, Mark and Borycki, Dawid and Cooke, Colin and Berrocal, Edouard and Dai, Qionghai and others},
+  journal={APL Photonics},
+  volume={6},
+  number={2},
+  year={2021},
+  html={https://doi.org/10.1063/5.0031225},
+  publisher={AIP Publishing},
+  preview={pdcs_wenhui.png}
+}
+
+@article{konda2020fourier,
+  title={Fourier ptychography: current applications and future promises},
+  author={Konda, Pavan Chandra and Loetgering, Lars and Zhou, Kevin C and Xu, Shiqi and Harvey, Andrew R and Horstmeyer, Roarke},
+  journal={Optics express},
+  volume={28},
+  number={7},
+  pages={9603--9630},
+  year={2020},
+  html={https://doi.org/10.1364/OE.386168},
+  publisher={Optica Publishing Group},
+  preview={fp_review.png}
+}
+
+@article{zeng2020real,
+  title={Real-time colorectal cancer diagnosis using PR-OCT with deep learning},
+  author={Xu, Shiqi and Zeng, Yifeng and Chapman Jr, William C and Li, Shuying and Alipour, Zahra and Abdelal, Heba and Chatterjee, Deyali and Mutch, Matthew and Zhu, Quing},
+  journal={Theranostics},
+  volume={10},
+  number={6},
+  pages={2587},
+  year={2020},
+  html={https://www.thno.org/v10p2587.htm},
+  publisher={Ivyspring International Publisher},
+  preview={oct_colon.png},
+  selected={true}
+}
+
+@article{xu2019improving,
+  title={Improving DOT reconstruction with a Born iterative method and US-guided sparse regularization},
+  author={Xu, Shiqi and Uddin, KM Shihab and Zhu, Quing},
+  journal={Biomedical optics express},
+  volume={10},
+  number={5},
+  pages={2528--2541},
+  year={2019},
+  html={https://doi.org/10.1364/BOE.10.002528},
+  publisher={Optica Publishing Group},
+  preview={dot_breast.png}
+}
+
+@inproceedings{sun2019regularized,
+  title={Regularized fourier ptychography using an online plug-and-play algorithm},
+  author={Sun, Yu and Xu, Shiqi and Li, Yunzhe and Tian, Lei and Wohlberg, Brendt and Kamilov, Ulugbek S},
+  booktitle={ICASSP 2019-2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={7665--7669},
+  year={2019},
+  html={https://ieeexplore.ieee.org/document/8683057},
+  organization={IEEE},
+  preview={hela_fpm_sparse.png}
+}
