--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,74 @@
 ---
 ---
+@article{guo2025role,
+  title={The Role of Pretraining in High-Throughput Laminography Restoration},
+  author={Guo, Zijing and Xu, Shiqi and Majlan, Kamyar and Zhou, Zeyu and Xu, Moran and Andreyev, Andriy and Ruoff, Johannes and Andrew, Matthew},
+  journal={Microscopy and Microanalysis},
+  volume={31},
+  number={Supplement\_1},
+  pages={ozaf048--984},
+  year={2025},
+  publisher={Oxford University Press US},
+  html={https://doi.org/10.1093/mam/ozaf048.984}
+}
+
+@article{zhou2025high,
+  title={High-speed 4D fluorescence light field tomography of whole freely moving organisms},
+  author={Zhou, Kevin C and Cook, Clare and Chakraborty, Archan and Bagwell, Jennifer and J{\"o}nsson, Joakim and Lee, Kyung Chul and Yang, Xi and Xu, Shiqi and Balla, Ramana and Kolar, Kushal and others},
+  journal={Optica},
+  volume={12},
+  number={5},
+  pages={674--684},
+  year={2025},
+  publisher={Optica Publishing Group},
+  html={https://doi.org/10.1364/OPTICA.549707},
+  preview={lightfield4d.jpg}
+}
+
+@article{kreiss2025beneath,
+  title={Beneath the surface: revealing deep-tissue blood flow in human subjects with massively parallelized diffuse correlation spectroscopy},
+  author={Kreiss, Lucas and Wu, Melissa and Wayne, Michael and Xu, Shiqi and McKee, Paul and Dwamena, Derrick and Kim, Kanghyun and Lee, Kyung Chul and Cowdrick, Kyle R and Liu, Wenhui and others},
+  journal={Neurophotonics},
+  volume={12},
+  number={2},
+  pages={025007--025007},
+  year={2025},
+  publisher={Society of Photo-Optical Instrumentation Engineers},
+  html={https://doi.org/10.1117/1.NPh.12.2.025007}
+}
+
+@article{kim2024rapid,
+  title={Rapid 3D imaging at cellular resolution for digital cytopathology with a multi-camera array scanner (MCAS)},
+  author={Kim, Kanghyun and Chaware, Amey and Cook, Clare B and Xu, Shiqi and Abdelmalak, Monica and Cooke, Colin and Zhou, Kevin C and Harfouche, Mark and Reamey, Paul and Saliu, Veton and others},
+  journal={npj Imaging},
+  volume={2},
+  number={1},
+  pages={39},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  html={https://www.nature.com/articles/s44303-024-00042-2}
+}
+
+@inproceedings{xu2024self,
+  title={Self-supervised deep image restoration for x-ray computed laminographic tomography},
+  author={Xu, Shiqi and Candell, Susan and Case, Tom and Goehnermeier, Aksel and Irwin, Jeffrey and Majlan, Kamyar and Preil, Moshe and Ruoff, Johannes and Xu, Moran and Yang, Faguo and others},
+  booktitle={Developments in X-Ray Tomography XV},
+  volume={13152},
+  pages={131520T},
+  year={2024},
+  organization={SPIE}
+}
+
+@inproceedings{andrew2024x,
+  title={X-ray reconstruction using synthetic prior image restoration, with application to noise and artefact removal},
+  author={Andrew, Matthew and Andreyev, Andriy and Yang, Faguo and Xu, Moran and Xu, Shiqi},
+  booktitle={Developments in X-Ray Tomography XV},
+  volume={13152},
+  pages={131520E},
+  year={2024},
+  organization={SPIE}
+}
+
 @article{lee2024anisotropic,
   title={Anisotropic regularization for sparsely sampled and noise-robust Fourier ptychography},
   author={Lee, Kyung Chul and Chae, Hyesuk and Xu, Shiqi and Lee, Kyungwon and Horstmeyer, Roarke and Lee, Seung Ah and Hong, Byung-Woo},
@@ -8,7 +77,9 @@
   number={14},
   pages={25343--25361},
   year={2024},
-  publisher={Optica Publishing Group}
+  html={https://doi.org/10.1364/OE.529023},
+  publisher={Optica Publishing Group},
+  preview={anisotropic.jpg}
 }
 
 @article{xu2023tensorial,
