--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,7 +46,8 @@
   pages={39},
   year={2024},
   publisher={Nature Publishing Group UK London},
-  html={https://www.nature.com/articles/s44303-024-00042-2}
+  html={https://www.nature.com/articles/s44303-024-00042-2},
+  preview={mcas.png}
 }
 
 @inproceedings{xu2024self,
