--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,8 @@
   pages={025007--025007},
   year={2025},
   publisher={Society of Photo-Optical Instrumentation Engineers},
-  html={https://doi.org/10.1117/1.NPh.12.2.025007}
+  html={https://doi.org/10.1117/1.NPh.12.2.025007},
+  preview={pdcs512.png}
 }
 
 @article{kim2024rapid,
